updated catalan translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@12571 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -1,6 +1,3 @@
-
-#Java code
-
 thischat = Aquest xat no està disponible.
 chatmesdel = Missatge de xat esborrat per
 chatroom = Sala de xat:
@@ -27,10 +24,6 @@ youdonot2 = No teniu autorització per crear aquest xat.
 youdonot3 = No teniu autorització per enviar aquest xat.
 youdonot4 = No teniu autorització per esborrar aquest missatge de xat.
 youent = Heu entrat
-
-
-#General Vm
-
 gen.alert = Avís:
 gen.cancel = Cancel·lar
 gen.date = Data:
@@ -38,16 +31,8 @@ gen.delete = Esborrar
 gen.from = Des de/d':
 gen.mess = Missatge:
 gen.save = Actualitzar opcions
-
-
-#Control Vm
-
 control.clear = Buidar
 control.post = Afegir missatge
-
-
-#Customize Vm
-
 custom.chatroom = Sala de xat
 custom.cuschat = Opcions de xat
 custom.days = dies
@@ -62,25 +47,11 @@ custom.use3 = Utilitzar una nova sala de xat
 custom.which = Quina sala de xat es visualitzarà?
 custom.called = anomenada
 custom.msgdisp = Pantalla de missatge
-
-
-#Delete Vm
-
 delete.delete = Esborrant missatge de xat
 delete.sure = Segur que voleu esborrar aquest missatge permanentment?
-
-
-#Layaut Vm
-
 lay.note = Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc.
 lay.user = Usuaris al xat
-
-
-#List Vm
-
 list.del = Esborrar aquest missatge
-
-#Toolbar Vm (also used in Java)
 bar.onlytime = Només l'hora
 bar.datetime = Data i hora
 bar.onlydate = Només la data
@@ -88,4 +59,4 @@ bar.nodatetime = Ni data ni hora
 bar.allmes = Tots els missatges
 bar.view = Visualitzar
 bar.show = Mostrar
-bar.listnavselect = List options: press alt + up and down arrows to scroll through menu
+bar.listnavselect = Llista d'opcions: premeu alt + fletxes amunt i avall per desplaÃ§ar-vos pel menÃº
