SAK-5868 second installment of swedish translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@15135 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_sv.properties
+++ b/chat-tool/tool/src/bundle/chat_sv.properties
@@ -1,91 +1,63 @@
-
-#Java code
-
-thischat = Denna chat är inte tillgänglig.
-chatmesdel = Chatmeddelande borttaget av
-chatroom = Chat:
-days = Dagar
-forchat = för namn på chat. Chatnamn
-hided = Dölj datum
-hidet = Dölj tid
-messages = Meddelanden
-on = på
-permis = Rättigheter
-setpermis = Ställ in rättighet för chat på sajt
-showall = Alla meddelanden
-showd = Visa datum
-showlast = Visa senaste
-showpast = Föregående
-showt = Visa tid
-showtoday = Visa meddelanden från idag
-thereispro = Rättigheter kan för närvarande inte sättas eftersom sajten redan håller på att ändras. Stäng rättigheter i andra verktyg innan du kan fortsätta.
-therewaspro = Det uppstod ett problem med att sända det tidigare meddelandet.
-turnoff = Stäng AV besked om nytt chatmeddelande 
-turnon = Sätt PÅ besked om nytt chatmeddelande 
-youdonot1 = Du har inte rättighet att se denna chat. 
-youdonot2 = Du har inte rättighet att skapa denna chat.
-youdonot3 = Du har inte rättighet att skriva i denna chat. 
-youdonot4 = Du har inte rättighet att ta bort detta chatmeddelande.
-youent = Du skrev
-
-
-#General Vm
-
-gen.alert = Besked:
-gen.cancel = Avbryt
-gen.date = Datum:
-gen.delete = Ta bort
-gen.from = Från:
-gen.mess = Meddelande:
-gen.save = Uppdatera inställningar
-
-
-#Control Vm
-
-control.clear = Rensa
-control.post = Lägg till meddelande
-
-
-#Customize Vm
-
-custom.chatroom = Chat 
-custom.cuschat = Inställningar för chat
-custom.days = dagar
-custom.howmany = Hur många meddelanden skall visas?
-custom.mess = meddelanden
-custom.showall = Visa alla meddelanden
-custom.showlast = Visa det sista
-custom.showpast = Visa gamla meddelanden
-custom.use1 = Använd denna sajts huvudchat 
-custom.use2 = Använd chatrummet med namn 
-custom.use3 = Använd en ny chat 
-custom.which  = Vilken chat skall visas?
-custom.called = med namn
-custom.msgdisp = Visning av meddelanden
-
-
-#Delete Vm
-
-delete.delete = Tar bort chatmeddelande 
-delete.sure = Är du säker på att du vill ta bort detta meddelande permanent?
-
-
-#Layaut Vm
-
-lay.note = Alla chatmeddelanden arkiveras och kan läsas av alla sajtens deltagare.
-lay.user = Deltagare i chatten
-
-
-#List Vm
-
-list.del = Ta bort detta meddelande 
-
-#Toolbar Vm (also used in Java)
-bar.onlytime = Enbart tid 
-bar.datetime = Datum och tid
-bar.onlydate = Enbart datum
-bar.nodatetime = Varken datum eller tid
-bar.allmes = Alla meddelanden
-bar.view=Se
+#Stored by I18NEdit, may be edited!
+bar.allmes=Alla inl\u00E4gg
+bar.datetime=Datum och tid
+bar.listnavselect=Lista \u00F6ver inst\u00E4llningar\: tryck Alt + upp- och nedpilar f\u00F6r att skrolla genom menyn 
+bar.nodatetime=Varken datum eller tid
+bar.onlydate=Enbart datum
+bar.onlytime=Enbart tid 
 bar.show=Visa
-bar.listnavselect = Lista över inställningar: tryck alt + upp- och nedpilar för att skrolla genom menyn 
+bar.view=Visa
+chatmesdel=Chatinl\u00E4gg borttaget av
+chatroom=Chat\:
+control.clear=Rensa
+control.post=G\u00F6r inl\u00E4gg
+custom.called=med namnet
+custom.chatroom=Chat 
+custom.cuschat=Inst\u00E4llningar f\u00F6r chat
+custom.days=dagar
+custom.howmany=Hur m\u00E5nga inl\u00E4gg skall visas?
+custom.mess=inl\u00E4gg
+custom.msgdisp=Hur inl\u00E4gg visas
+custom.showall=Visa alla inl\u00E4gg
+custom.showlast=Visa de sista
+custom.showpast=Visa inte inl\u00E4gg \u00E4ldre \u00E4n
+custom.use1=Anv\u00E4nd denna sajts ursprungliga chat 
+custom.use2=Anv\u00E4nd chatten
+custom.use3=Anv\u00E4nd en ny chat 
+custom.which=Vilken chat skall visas?
+days=dagar
+delete.delete=Tar bort inl\u00E4gg 
+delete.sure=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort detta inl\u00E4gg permanent?
+forchat=f\u00F6r namn p\u00E5 chat. Chatnamn
+gen.alert=Varning\:
+gen.cancel=Avbryt
+gen.date=Datum\:
+gen.delete=Ta bort
+gen.from=Fr\u00E5n\:
+gen.mess=Inl\u00E4gg\:
+gen.save=Uppdatera
+hided=D\u00F6lj datum
+hidet=D\u00F6lj tid
+lay.note=Alla chatinl\u00E4gg arkiveras och kan l\u00E4sas av alla deltagare p\u00E5 sajten.
+lay.user=Deltagare i chatten
+list.del=Ta bort detta inl\u00E4gg 
+messages=Inl\u00E4gg
+on=p\u00E5
+permis=Beh\u00F6righeter
+setpermis=S\u00E4tt beh\u00F6righet f\u00F6r chat p\u00E5 sajt
+showall=Alla inl\u00E4gg
+showd=Visa datum
+showlast=Visa senaste
+showpast=F\u00F6reg\u00E5ende
+showt=Visa tid
+showtoday=Visa inl\u00E4gg fr\u00E5n idag
+thereispro=Beh\u00F6righeter kan inte st\u00E4llas in f\u00F6r n\u00E4rvarande eftersom sajten h\u00E5ller p\u00E5 att modifieras av dig eller n\u00E5gon annan. St\u00E4ng beh\u00F6righeter i andra verktyg innan du forts\u00E4tter.
+therewaspro=Det uppstod ett fel d\u00E5 det tidigare inl\u00E4gget skickades.
+thischat=Denna chat \u00E4r inte tillg\u00E4nglig.
+turnoff=St\u00E4ng av besked om nytt chatinl\u00E4gg
+turnon=S\u00E4tt p\u00E5 besked om nytt chatinl\u00E4gg
+youdonot1=Du har inte beh\u00F6righet att se denna chat. 
+youdonot2=Du har inte beh\u00F6righet att skapa denna chat.
+youdonot3=Du har inte beh\u00F6righet att skicka till i denna chat. 
+youdonot4=Du har inte beh\u00F6righet att ta bort detta chatinl\u00E4gg
+youent=Du skrev
