--- a/chat-tool/tool/src/bundle/chat_ja.properties
+++ b/chat-tool/tool/src/bundle/chat_ja.properties
@@ -88,3 +88,4 @@ bar.nodatetime = \u65e5\u4ed8\u3082\u6642\u9593\u3082\u8868\u793a\u3057\u306a\u3
 bar.allmes = \u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 bar.view=\u8868\u793a
 bar.show=\u8868\u793a
+bar.listnavselect = \u4e00\u89a7\u30aa\u30d7\u30b7\u30e7\u30f3: \u30e1\u30cb\u30e5\u30fc\u4e0a\u3067\u30b9\u30af\u30ed\u30fc\u30eb\u3059\u308b\u5834\u5408\u306f Alt + \u4e0a \u307e\u305f\u306f \u4e0b\u77e2\u5370\u3092\u62bc\u3057\u307e\u3059\uff0e
