SAK-7265 update spanish translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@18478 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -88,3 +88,6 @@ bar.nodatetime = Ni fecha ni hora
 bar.allmes = Todos los mensajes
 bar.view=Mostrar
 bar.show=Mostrar
+
+######################### UPV Revision #####################
+bar.listnavselect = Lista de opciones: presione Alt + cursos (arriba o abajo) para desplazarse por el menú.
