SAK-7330 Catalan translations from Universitat de Lleida
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@19267 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -59,4 +59,4 @@ bar.nodatetime = Ni data ni hora
 bar.allmes = Tots els missatges
 bar.view = Visualitzar
 bar.show = Mostrar
-bar.listnavselect = Llista d'opcions: premeu alt + fletxes amunt i avall per desplaÃ§ar-vos pel menÃº
+bar.listnavselect = Llista d'opcions: premeu alt + fletxes amunt i avall per desplaçar-vos pel menú
