SAK-7676 - update spanish properties files
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@20446 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -26,7 +26,7 @@ youdonot1 = No tiene permiso para ver este chat.
 youdonot2 = No tiene permiso para crear este chat.
 youdonot3 = No tiene permiso para ver enviar mensajes a este chat.
 youdonot4 = No tiene permiso para borrar mensajes de este chat.
-youent = You entered
+youent = Ha introducido
 
 
 #General Vm
