SAK-8602 spanish translations from UPV
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22268 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -88,6 +88,28 @@ bar.nodatetime = Ni fecha ni hora
 bar.allmes = Todos los mensajes
 bar.view=Mostrar
 bar.show=Mostrar
-
-######################### UPV Revision #####################
 bar.listnavselect = Lista de opciones: presione Alt + cursos (arriba o abajo) para desplazarse por el menú.
+
+
+
+
+
+
+
+
+# ###############################
+# all the new strings
+
+default_new_channel_title=Canal principal
+allMessages=Todos los mensajes
+timeOnly=Sólo hora
+timeAndDate=Fecha y hora
+dateOnly=Sólo fecha
+neitherDateOrTime=Ni fecha ni hora
+manage_tool=Herramienta de gestión
+lay_note=Todos los mensajes de chat se archivarán y podrán ser leídos por cada miembro del sitio
+lay_user=Usuarios en el chat
+view=Ver
+control_post=Añadir mensaje
+cancel=Cancelar
+permissions_link=Permisos
