--- a/chat-tool/tool/src/bundle/chat_sv.properties
+++ b/chat-tool/tool/src/bundle/chat_sv.properties
@@ -7,57 +7,57 @@ bar.onlydate=Enbart datum
 bar.onlytime=Enbart tid 
 bar.show=Visa
 bar.view=Visa
-chatmesdel=Chatinl\u00E4gg borttaget av
-chatroom=Chat\:
+chatmesdel=Chattinl\u00E4gg borttaget av
+chatroom=Chatt\:
 control.clear=Rensa
 control.post=G\u00F6r inl\u00E4gg
 custom.called=med namnet
-custom.chatroom=Chat 
-custom.cuschat=Inst\u00E4llningar f\u00F6r chat
+custom.chatroom=Chatt
+custom.cuschat=Inst\u00E4llningar
 custom.days=dagar
 custom.howmany=Hur m\u00E5nga inl\u00E4gg skall visas?
-custom.mess=inl\u00E4gg
-custom.msgdisp=Hur inl\u00E4gg visas
+custom.mess=inl\u00E4ggen
+custom.msgdisp=Visa inl\u00E4gg
 custom.showall=Visa alla inl\u00E4gg
 custom.showlast=Visa de sista
 custom.showpast=Visa inte inl\u00E4gg \u00E4ldre \u00E4n
-custom.use1=Anv\u00E4nd denna sajts ursprungliga chat 
+custom.use1=Anv\u00E4nd denna sajts ursprungliga chatt
 custom.use2=Anv\u00E4nd chatten
-custom.use3=Anv\u00E4nd en ny chat 
-custom.which=Vilken chat skall visas?
+custom.use3=Anv\u00E4nd en ny chatt
+custom.which=Vilken chatt skall visas?
 days=dagar
 delete.delete=Tar bort inl\u00E4gg 
-delete.sure=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort detta inl\u00E4gg permanent?
-forchat=f\u00F6r namn p\u00E5 chat. Chatnamn
+delete.sure=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort detta inl\u00E4gg?
+forchat=f\u00F6r namn p\u00E5 chatt. Chattnamn
 gen.alert=Varning\:
 gen.cancel=Avbryt
 gen.date=Datum\:
 gen.delete=Ta bort
 gen.from=Fr\u00E5n\:
 gen.mess=Inl\u00E4gg\:
-gen.save=Uppdatera
+gen.save=Spara
 hided=D\u00F6lj datum
 hidet=D\u00F6lj tid
-lay.note=Alla chatinl\u00E4gg arkiveras och kan l\u00E4sas av alla deltagare p\u00E5 sajten.
+lay.note=Alla chattinl\u00E4gg finns kvar och kan l\u00E4sas av alla deltagare p\u00E5 sajten.
 lay.user=Deltagare i chatten
 list.del=Ta bort detta inl\u00E4gg 
 messages=Inl\u00E4gg
 on=p\u00E5
 permis=Beh\u00F6righeter
-setpermis=S\u00E4tt beh\u00F6righet f\u00F6r chat p\u00E5 sajt
+setpermis=S\u00E4tt beh\u00F6righet f\u00F6r chatt p\u00E5 sajt
 showall=Alla inl\u00E4gg
 showd=Visa datum
 showlast=Visa senaste
 showpast=F\u00F6reg\u00E5ende
 showt=Visa tid
 showtoday=Visa inl\u00E4gg fr\u00E5n idag
-thereispro=Beh\u00F6righeter kan inte st\u00E4llas in f\u00F6r n\u00E4rvarande eftersom sajten h\u00E5ller p\u00E5 att modifieras av dig eller n\u00E5gon annan. St\u00E4ng beh\u00F6righeter i andra verktyg innan du forts\u00E4tter.
-therewaspro=Det uppstod ett fel d\u00E5 det tidigare inl\u00E4gget skickades.
-thischat=Denna chat \u00E4r inte tillg\u00E4nglig.
-turnoff=St\u00E4ng av besked om nytt chatinl\u00E4gg
-turnon=S\u00E4tt p\u00E5 besked om nytt chatinl\u00E4gg
-youdonot1=Du har inte beh\u00F6righet att se denna chat. 
-youdonot2=Du har inte beh\u00F6righet att skapa denna chat.
-youdonot3=Du har inte beh\u00F6righet att skicka till i denna chat. 
-youdonot4=Du har inte beh\u00F6righet att ta bort detta chatinl\u00E4gg
+thereispro=Beh\u00F6righeter kan inte s\u00E4ttas f\u00F6r n\u00E4rvarande eftersom sajten h\u00E5ller p\u00E5 att modifieras av dig eller n\u00E5gon annan. St\u00E4ng beh\u00F6righeter i andra verktyg innan du forts\u00E4tter.
+therewaspro=Det uppstod ett fel d\u00E5 inl\u00E4gget gjordes.
+thischat=Denna chatt \u00E4r inte tillg\u00E4nglig.
+turnoff=St\u00E4ng av besked om nytt chattinl\u00E4gg
+turnon=S\u00E4tt p\u00E5 besked om nytt chattinl\u00E4gg
+youdonot1=Du har inte beh\u00F6righet att se denna chatt. 
+youdonot2=Du har inte beh\u00F6righet att skapa en chatt.
+youdonot3=Du har inte beh\u00F6righet att g\u00F6ra inl\u00E4gg i denna chatt. 
+youdonot4=Du har inte beh\u00F6righet att ta bort detta chattinl\u00E4gg.
 youent=Du skrev
