SAK-7676 more spanish properties files
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22785 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -12,6 +12,7 @@ messages = Mensajes
 on = on
 permis = Permisos
 setpermis = Establecer permisos en la Sala de Chat del sitio 
+perm_description= Establecer permisos para {0} en el sitio de trabajo ''{1}''
 showall = Todos los mensajes
 showd = Mostrar fecha
 showlast = Mostrar los últimos
@@ -35,6 +36,7 @@ gen.alert = Alerta:
 gen.cancel = Cancelar
 gen.date = Fecha:
 gen.delete = Borrar
+gen.edit = Editar
 gen.from = De:
 gen.mess = Mensaje:
 gen.save = Actualizar opciones
@@ -100,6 +102,8 @@ bar.listnavselect = Lista de opciones: presione Alt + cursos (arriba o abajo) pa
 # ###############################
 # all the new strings
 
+past_x_days={0} días anteriores
+
 default_new_channel_title=Canal principal
 allMessages=Todos los mensajes
 timeOnly=Sólo hora
@@ -110,6 +114,43 @@ manage_tool=Herramienta de gestión
 lay_note=Todos los mensajes de chat se archivarán y podrán ser leídos por cada miembro del sitio
 lay_user=Usuarios en el chat
 view=Ver
-control_post=Añadir mensaje
-cancel=Cancelar
-permissions_link=Permisos
+
+add_room=Añadir sala
+change_room=Cambiar sala
+enter_the_chat_room=Entrar en la sala ''{0}'' 
+channel_creation_date=Fecha de creación
+channel_description=Descripción
+channel_title=Título
+
+edit_channel_title=Editar sala
+
+message_display=Mensaje que mostrar
+
+perm_error=Permisos insuficientes para {0}
+
+message_owner=Propietario
+
+select_room_title=Seleccionar una sala de chat
+
+tool_options_title=Opciones de la herramienta
+
+monitor_panel=Lista
+presence_panel=Presencia
+control_panel=Control
+
+delete_room_confirm_title = Borrando una sala de chat
+delete_room_confirm_alert = ¿Está seguro de que desea borrar permanentemente esta sala de chat?
+
+#Synoptic pages
+recent_chat_heading= Mensajes recientes
+number_days=Número de días transcurridos
+number_messages=Número de mensajes de chat
+number_chars=Número de caracteres del mensaje de chat
+update_text=Actualizar
+
+title_required=El título es obligatorio
+
+set_default=Establecer como por defecto
+set_as_default=Establecer ''{0}'' como por defecto
+
+
