SAK-8747 update japanese properties
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22806 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_ja.properties
+++ b/chat-tool/tool/src/bundle/chat_ja.properties
@@ -89,3 +89,27 @@ bar.allmes = \u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 bar.view=\u8868\u793a
 bar.show=\u8868\u793a
 bar.listnavselect = \u4e00\u89a7\u30aa\u30d7\u30b7\u30e7\u30f3: \u30e1\u30cb\u30e5\u30fc\u4e0a\u3067\u30b9\u30af\u30ed\u30fc\u30eb\u3059\u308b\u5834\u5408\u306f Alt + \u4e0a \u307e\u305f\u306f \u4e0b\u77e2\u5370\u3092\u62bc\u3057\u307e\u3059\uff0e
+
+
+
+
+
+
+
+
+# ###############################
+# all the new strings
+
+default_new_channel_title=\u30e1\u30a4\u30f3\u30c1\u30e3\u30cd\u30eb
+allMessages=\u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
+timeOnly=\u6642\u523b\u306e\u307f
+timeAndDate=\u65e5\u4ed8\u53ca\u3073\u6642\u523b
+dateOnly=\u65e5\u4ed8\u306e\u307f
+neitherDateOrTime=\u65e5\u4ed8\u307e\u305f\u306f\u6642\u523b\u306e\u3069\u3061\u3089\u304b
+manage_tool=\u30c4\u30fc\u30eb\u3092\u7ba1\u7406
+lay_note=\u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306f\u30a2\u30fc\u30ab\u30a4\u30d6\u3055\u308c\uff0c\u30b5\u30a4\u30c8\u53c2\u52a0\u8005\u306a\u3089\u8ab0\u3067\u3082\u8aad\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u3059\uff0e
+lay_user=\u30c1\u30e3\u30c3\u30c8\u306b\u3044\u308b\u30e6\u30fc\u30b6
+view=\u8868\u793a
+control_post=\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8ffd\u52a0
+cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
+permissions_link=\u30d1\u30fc\u30df\u30c3\u30b7\u30e7\u30f3
