SAK-8794 update Catalan translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@22926 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -60,3 +60,47 @@ bar.allmes = Tots els missatges
 bar.view = Visualitzar
 bar.show = Mostrar
 bar.listnavselect = Llista d'opcions: premeu alt + fletxes amunt i avall per desplaçar-vos pel menú
+
+allMessages=Tots els missatges
+cancel=Cancel·lar
+control_post=Afegir missatge
+dateOnly=Només la data
+default_new_channel_title=Canal principal
+lay_note=Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc. 
+lay_user=Usuaris al xat
+manage_tool=Eina d'administració
+neitherDateOrTime=Ni data ni hora
+permissions_link=Permisos
+timeAndDate=Data i hora
+timeOnly=Només l'hora
+view=Visualitzar
+
+
+add_room=Afegir Sala
+change_room=Canviar Sala
+channel_creation_date=Data de Creació
+channel_description=Descripció
+channel_title=Títol
+control_panel=Control
+delete_room_confirm_alert=Esteu segurs de voler suprimir definitivament aquesta sala de xat?
+delete_room_confirm_title=Suprimint sala de xat
+edit_channel_title=Editar Sala
+enter_the_chat_room=Introduir ''{0}'' Sala
+gen.edit=Editar
+message_display=Visor de missatges
+message_owner=Propietari
+monitor_panel=Llista
+number_chars=Número de caràcters per missatge de xat
+number_days=Número de dies transcorreguts
+number_messages=Número de missatges de xat
+past_x_days= {0} dies enrere
+perm_description=Establir permisos per a {0} en l'espai de treball ''{1}''
+perm_error=Permisos insuficients per a {0}
+presence_panel=Presència
+recent_chat_heading=Visor de xats recents
+select_room_title=Seleccionar Sala de Xat
+set_as_default=Establir ''{0}'' per defecte
+set_default=Establir per Defecte
+title_required=El títol és obligatori
+tool_options_title=Opcions de l'Eina
+update_text=Actualitzar
