SAK-8602 spanish translation updates
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@27724 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -153,4 +153,4 @@ title_required=El título es obligatorio
 set_default=Establecer como por defecto
 set_as_default=Establecer ''{0}'' como por defecto
 
-
+viewingChatRoomText=Actualmente, mostrando mensajes para ''{0}''
