SAK-8602 Spanish translation updates
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@27809 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -123,6 +123,7 @@ channel_description=Descripción
 channel_title=Título
 
 edit_channel_title=Editar sala
+add_channel_title=Añadir sala
 
 message_display=Mensaje que mostrar
 
@@ -133,6 +134,8 @@ message_owner=Propietario
 select_room_title=Seleccionar una sala de chat
 
 tool_options_title=Opciones de la herramienta
+synoptic_options_title=Opciones del resumen
+room_list_title=Gestionar salas
 
 monitor_panel=Lista
 presence_panel=Presencia
