SAK-8794 updated catalan translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@27867 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -104,3 +104,9 @@ set_default=Establir per Defecte
 title_required=El títol és obligatori
 tool_options_title=Opcions de l'Eina
 update_text=Actualitzar
+
+viewingChatRoomText=Mostrant els missatges de ''{0}''
+
+add_channel_title=Afegir Sala de Xat
+room_list_title=Administrar Sales de Xat
+synoptic_options_title=Opcions sinòptiques
