--- a/chat-tool/tool/src/bundle/chat_zh_CN.properties
+++ b/chat-tool/tool/src/bundle/chat_zh_CN.properties
@@ -1,16 +1,16 @@
 #Java code	
 
-thischat = \u65e0\u6cd5\u8fdb\u884c\u6b64\u804a\u5929\u3002
-chatmesdel = \u5df2\u88ab \u5220\u9664\u7684\u804a\u5929\u4fe1\u606f\u3002
-chatroom = \u804a\u5929\u5ba4:
+thischat = \u65e0\u6cd5\u8fdb\u884c\u91ca\u7591\u3002
+chatmesdel = \u5df2\u88ab\u5220\u9664\u7684\u91ca\u7591\u4fe1\u606f\u3002
+chatroom = \u91ca\u7591\u5ba4:
 days = \u5929\u6570
-forchat = \u804a\u5929\u5ba4\u540d\u79f0
+forchat = \u91ca\u7591\u5ba4\u540d\u79f0
 hided = \u9690\u85cf\u65e5\u671f
 hidet = \u9690\u85cf\u65f6\u95f4
 messages = \u4fe1\u606f
 on = \u5f00\u542f
 permis = \u8bb8\u53ef\u6743
-setpermis = \u4e3a\u5de5\u4f5c\u7ad9\u70b9\u7684\u804a\u5929\u5ba4\u8bbe\u7f6e\u6743\u9650
+setpermis = \u4e3a\u8bfe\u7a0b\u7ad9\u70b9\u7684\u91ca\u7591\u5ba4\u8bbe\u7f6e\u6743\u9650
 showall = \u6240\u6709\u4fe1\u606f
 showd = \u663e\u793a\u65e5\u671f
 showlast = \u663e\u793a\u6700\u8fd1\u7684
@@ -21,10 +21,10 @@ thereispro = \u5f53\u524d\u8bbe\u7f6e\u6743\u9650\u6709\u95ee\u9898\u3002
 therewaspro = \u524d\u4e00\u4fe1\u606f\u53d1\u9001\u6709\u95ee\u9898\u3002
 turnoff = \u5173\u95ed\u65b0\u4fe1\u606f\u901a\u77e5
 turnon = \u5f00\u542f\u65b0\u4fe1\u606f\u901a\u77e5
-youdonot1 = \u60a8\u65e0\u6743\u6d4f\u89c8\u6b64\u804a\u5929\u5185\u5bb9
-youdonot2 = \u60a8\u65e0\u6743\u521b\u5efa\u6b64\u804a\u5929\u5185\u5bb9
-youdonot3 = \u60a8\u65e0\u6743\u53d1\u5e16\u81f3\u6b64\u804a\u5929\u5185\u5bb9
-youdonot4 = \u60a8\u65e0\u6743\u5220\u9664\u6b64\u804a\u5929\u4fe1\u606f
+youdonot1 = \u60a8\u65e0\u6743\u6d4f\u89c8\u6b64\u91ca\u7591\u5185\u5bb9
+youdonot2 = \u60a8\u65e0\u6743\u521b\u5efa\u6b64\u91ca\u7591\u5185\u5bb9
+youdonot3 = \u60a8\u65e0\u6743\u53d1\u5e16\u81f3\u6b64\u91ca\u7591\u5185\u5bb9
+youdonot4 = \u60a8\u65e0\u6743\u5220\u9664\u6b64\u91ca\u7591\u4fe1\u606f
 youent = \u60a8\u5df2\u8fdb\u5165
 
 
@@ -47,32 +47,32 @@ control.post = \u6dfb\u52a0\u4fe1\u606f
 
 #Customize Vm	
 
-custom.chatroom = \u804a\u5929\u5ba4
-custom.cuschat = \u804a\u5929\u9009\u9879
+custom.chatroom = \u91ca\u7591\u5ba4
+custom.cuschat = \u91ca\u7591\u9009\u9879
 custom.days = \u5929\u6570
 custom.howmany = \u591a\u5c11\u4fe1\u606f\u5c06\u88ab\u663e\u793a\uff1f
 custom.mess = \u4fe1\u606f
 custom.showall = \u663e\u793a\u6240\u6709\u4fe1\u606f
 custom.showlast = \u663e\u793a\u6700\u540e\u7684
 custom.showpast = \u663e\u793a\u4ee5\u524d\u7684\u4fe1\u606f
-custom.use1 = \u4f7f\u7528\u672c\u5de5\u4f5c\u7f51\u7ad9\u7684\u4e3b\u804a\u5929\u5ba4
-custom.use2 = \u4f7f\u7528\u540d\u4e3a XXX \u7684\u804a\u5929\u5ba4
-custom.use3 = \u4f7f\u7528\u4e00\u4e2a\u65b0\u804a\u5929\u5ba4
-custom.which = \u54ea\u4e2a\u804a\u5929\u5ba4\u5c06\u88ab\u663e\u793a\uff1f
+custom.use1 = \u4f7f\u7528\u672c\u5de5\u4f5c\u7f51\u7ad9\u7684\u4e3b\u91ca\u7591\u5ba4
+custom.use2 = \u4f7f\u7528\u540d\u4e3a XXX \u7684\u91ca\u7591\u5ba4
+custom.use3 = \u4f7f\u7528\u4e00\u4e2a\u65b0\u91ca\u7591\u5ba4
+custom.which = \u54ea\u4e2a\u91ca\u7591\u5ba4\u5c06\u88ab\u663e\u793a\uff1f
 custom.called = \u540d\u79f0
 custom.msgdisp = \u4fe1\u606f\u663e\u793a
 
 
 #Delete Vm	
 
-delete.delete = \u5220\u9664\u804a\u5929\u4fe1\u606f
+delete.delete = \u5220\u9664\u91ca\u7591\u4fe1\u606f
 delete.sure = \u60a8\u786e\u8ba4\u8981\u6c38\u4e45\u5220\u9664\u6b64\u4fe1\u606f\u5417\uff1f
 
 
 #Layaut Vm	
 
-lay.note = \u6240\u6709\u804a\u5929\u4fe1\u606f\u88ab\u5b58\u6863\u5e76\u53ef\u88ab\u4efb\u4f55\u7f51\u7ad9\u5171\u4eab\u8005\u6d4f\u89c8
-lay.user = \u6b63\u5728\u804a\u5929\u7684\u7528\u6237
+lay.note = \u6240\u6709\u91ca\u7591\u4fe1\u606f\u88ab\u5b58\u6863\u5e76\u53ef\u88ab\u4efb\u4f55\u7f51\u7ad9\u5171\u4eab\u8005\u6d4f\u89c8
+lay.user = \u6b63\u5728\u91ca\u7591\u7684\u7528\u6237
 
 
 #List Vm	
