SAK-9641 updated spanish translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29408 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -157,3 +157,5 @@ set_default=Establecer como por defecto
 set_as_default=Establecer ''{0}'' como por defecto
 
 viewingChatRoomText=Actualmente, mostrando mensajes para ''{0}''
+
+back_to_room=Volver a la sala
