SAK-9641 updated spanish
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@29995 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -102,7 +102,8 @@ bar.listnavselect = Lista de opciones: presione Alt + cursos (arriba o abajo) pa
 # ###############################
 # all the new strings
 
-past_x_days={0} días anteriores
+past_x_days= Últimos {0} días
+past_x_messages= Últimos {0} mensajes
 
 default_new_channel_title=Canal principal
 allMessages=Todos los mensajes
@@ -112,6 +113,8 @@ dateOnly=Sólo fecha
 neitherDateOrTime=Ni fecha ni hora
 manage_tool=Herramienta de gestión
 lay_note=Todos los mensajes de chat se archivarán y podrán ser leídos por cada miembro del sitio
+lay_restricted_note_days=Únicamente se archivarán los mensajes de los últimos {0} días para que puedan ser consultados por cualquier miembro del sitio.
+lay_restricted_note_messages= Únicamente se archivarán los últimos {0} mensajes para que puedan ser consultados por cualquier miembro del sitio.
 lay_user=Usuarios en el chat
 view=Ver
 
@@ -159,3 +162,5 @@ set_as_default=Establecer ''{0}'' como por defecto
 viewingChatRoomText=Actualmente, mostrando mensajes para ''{0}''
 
 back_to_room=Volver a la sala
+
+channel_enable_override_description=Permitir a los usuarios del sitio cambiar el aspecto de su propia ventana de chat
