--- a/chat-tool/tool/src/bundle/chat_ja.properties
+++ b/chat-tool/tool/src/bundle/chat_ja.properties
@@ -12,6 +12,7 @@ messages = \u30e1\u30c3\u30bb\u30fc\u30b8
 on = on
 permis = \u6a29\u9650
 setpermis = \u30ef\u30fc\u30af\u30b5\u30a4\u30c8\u306e\u30c1\u30e3\u30c3\u30c8\u30eb\u30fc\u30e0\u306e\u6a29\u9650\u3092\u30bb\u30c3\u30c8
+perm_description=\u30ef\u30fc\u30af\u30b5\u30a4\u30c8\u300c{1}\u300d\u306e {0} \u306b\u5bfe\u3059\u308b\u6a29\u9650\u3092\u30bb\u30c3\u30c8
 showall = \u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 showd = \u65e5\u4ed8\u3092\u8868\u793a
 showlast = \u6700\u5f8c\u3092\u8868\u793a
@@ -35,6 +36,7 @@ gen.alert = \u8b66\u544a:
 gen.cancel = \u30ad\u30e3\u30f3\u30bb\u30eb
 gen.date = \u65e5\u4ed8:
 gen.delete = \u524a\u9664
+gen.edit = \u7de8\u96c6
 gen.from = \u6295\u7a3f\u8005:
 gen.mess = \u30e1\u30c3\u30bb\u30fc\u30b8:
 gen.save = \u30aa\u30d7\u30b7\u30e7\u30f3\u3092\u66f4\u65b0
@@ -100,6 +102,9 @@ bar.listnavselect = \u4e00\u89a7\u30aa\u30d7\u30b7\u30e7\u30f3: \u30e1\u30cb\u30
 # ###############################
 # all the new strings
 
+past_x_days=\u904e\u53bb {0} \u65e5\u9593
+past_x_messages=\u904e\u53bb {0} \u500b\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
+
 default_new_channel_title=\u30e1\u30a4\u30f3\u30c1\u30e3\u30cd\u30eb
 allMessages=\u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8
 timeOnly=\u6642\u523b\u306e\u307f
@@ -108,8 +113,54 @@ dateOnly=\u65e5\u4ed8\u306e\u307f
 neitherDateOrTime=\u65e5\u4ed8\u307e\u305f\u306f\u6642\u523b\u306e\u3069\u3061\u3089\u304b
 manage_tool=\u30c4\u30fc\u30eb\u3092\u7ba1\u7406
 lay_note=\u3059\u3079\u3066\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306f\u30a2\u30fc\u30ab\u30a4\u30d6\u3055\u308c\uff0c\u30b5\u30a4\u30c8\u53c2\u52a0\u8005\u306a\u3089\u8ab0\u3067\u3082\u8aad\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u3059\uff0e
+lay_restricted_note_days=\u904e\u53bb {0} \u65e5\u9593\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u3060\u3051\u304c\u30a2\u30fc\u30ab\u30a4\u30d6\u3055\u308c\uff0c\u30b5\u30a4\u30c8\u53c2\u52a0\u8005\u306a\u3089\u8ab0\u3067\u3082\u8aad\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u3059\uff0e
+lay_restricted_note_messages=\u904e\u53bb {0} \u500b\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u3060\u3051\u304c\u30a2\u30fc\u30ab\u30a4\u30d6\u3055\u308c\uff0c\u30b5\u30a4\u30c8\u53c2\u52a0\u8005\u306a\u3089\u8ab0\u3067\u3082\u8aad\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u3059\uff0e
 lay_user=\u30c1\u30e3\u30c3\u30c8\u306b\u3044\u308b\u30e6\u30fc\u30b6
 view=\u8868\u793a
-control_post=\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8ffd\u52a0
-cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
-permissions_link=\u30d1\u30fc\u30df\u30c3\u30b7\u30e7\u30f3
+
+add_room=\u30eb\u30fc\u30e0\u3092\u8ffd\u52a0
+change_room=\u30eb\u30fc\u30e0\u3092\u5909\u66f4
+enter_the_chat_room=\u300c{0}\u300d\u30eb\u30fc\u30e0\u306b\u5165\u308b
+channel_creation_date=\u4f5c\u6210\u65e5\u6642
+channel_description=\u8aac\u660e
+channel_title=\u30bf\u30a4\u30c8\u30eb
+
+edit_channel_title=\u30eb\u30fc\u30e0\u3092\u7de8\u96c6
+add_channel_title=\u30eb\u30fc\u30e0\u3092\u8ffd\u52a0
+
+message_display=\u30e1\u30c3\u30bb\u30fc\u30b8\u30c7\u30a3\u30b9\u30d7\u30ec\u30a4
+
+perm_error={0} \u306b\u5bfe\u3059\u308b\u6a29\u9650\u304c\u4e0d\u5341\u5206\u3067\u3059
+
+message_owner=\u6240\u6709\u8005
+
+select_room_title=\u30c1\u30e3\u30c3\u30c8\u30eb\u30fc\u30e0\u3092\u9078\u629e
+
+tool_options_title=\u30c4\u30fc\u30eb\u30aa\u30d7\u30b7\u30e7\u30f3
+synoptic_options_title=\u4e00\u89a7\u30aa\u30d7\u30b7\u30e7\u30f3
+room_list_title=\u30eb\u30fc\u30e0\u3092\u7ba1\u7406
+
+monitor_panel=\u4e00\u89a7
+presence_panel=\u30d7\u30ec\u30bc\u30f3\u30b9
+control_panel=\u30b3\u30f3\u30c8\u30ed\u30fc\u30eb
+
+delete_room_confirm_title = \u30c1\u30e3\u30c3\u30c8\u30eb\u30fc\u30e0\u3092\u524a\u9664\u3057\u3066\u3044\u307e\u3059
+delete_room_confirm_alert = \u3053\u306e\u30c1\u30e3\u30c3\u30c8\u30eb\u30fc\u30e0\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3067\u3059\u304b?
+
+#Synoptic pages
+recent_chat_heading=\u6700\u65b0\u30c1\u30e3\u30c3\u30c8\u306e\u8868\u793a
+number_days=\u7d4c\u904e\u65e5\u6570
+number_messages=\u30c1\u30e3\u30c3\u30c8\u30e1\u30c3\u30bb\u30fc\u30b8\u6570
+number_chars=\u30c1\u30e3\u30c3\u30c8\u30e1\u30c3\u30bb\u30fc\u30b8\u5f53\u305f\u308a\u306e\u6587\u5b57\u6570
+update_text=\u66f4\u65b0
+
+title_required=\u30bf\u30a4\u30c8\u30eb\u306f\u5fc5\u9808\u3067\u3059
+
+set_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u3068\u3057\u3066\u30bb\u30c3\u30c8
+set_as_default=\u30c7\u30d5\u30a9\u30eb\u30c8\u3068\u3057\u3066\u300c{0}\u300d\u3092\u30bb\u30c3\u30c8
+
+viewingChatRoomText=\u300c{0}\u300d\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u73fe\u5728\u8868\u793a\u3057\u3066\u3044\u307e\u3059
+
+back_to_room=\u30eb\u30fc\u30e0\u306b\u623b\u308b
+
+channel_enable_override_description=\u30b5\u30a4\u30c8\u53c2\u52a0\u8005\u304c\u81ea\u5206\u81ea\u8eab\u306e\u30c1\u30e3\u30c3\u30c8\u30a6\u30a3\u30f3\u30c9\u30a6\u306b\u5bfe\u3059\u308b\u30c1\u30e3\u30c3\u30c8\u8868\u793a\u8a2d\u5b9a\u3092\u5909\u66f4\u3059\u308b\u3053\u3068\u3092\u8a31\u53ef\u3059\u308b
