--- a/chat-tool/tool/src/bundle/chat_ja.properties
+++ b/chat-tool/tool/src/bundle/chat_ja.properties
@@ -149,7 +149,7 @@ synoptic_options_title=\u4e00\u89a7\u30aa\u30d7\u30b7\u30e7\u30f3
 room_list_title=\u30eb\u30fc\u30e0\u3092\u7ba1\u7406
 
 monitor_panel=\u4e00\u89a7
-presence_panel=\u30d7\u30ec\u30bc\u30f3\u30b9
+presence_panel=\u30eb\u30fc\u30e0\u306b\u3044\u308b\u30e6\u30fc\u30b6\u4e00\u89a7
 control_panel=\u30b3\u30f3\u30c8\u30ed\u30fc\u30eb
 
 delete_room_confirm_title = \u30c1\u30e3\u30c3\u30c8\u30eb\u30fc\u30e0\u3092\u524a\u9664\u3057\u3066\u3044\u307e\u3059
