--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -25,10 +25,10 @@ on = el
 permis = Autoritzacions
 setpermis = Ajustar les autoritzacions per a la sala de xat al lloc de treball
 showall = Tots els missatges
-showd = Mostrar la data
+showd = Mostra la data
 showlast = Mostrar els últims
 showpast = Passat
-showt = Mostrar l'hora
+showt = Mostra l'hora
 showtoday = Mostrar els missatges d'avui
 thereispro = En aquest moment hi ha un problema per ajustar les autoritzacions.
 therewaspro = Hi ha hagut un problema per enviar el missatge anterior.
@@ -40,22 +40,22 @@ youdonot3 = No teniu autorització per enviar aquest xat.
 youdonot4 = No teniu autorització per esborrar aquest missatge de xat.
 youent = Heu entrat
 gen.alert = Avís:
-gen.cancel = Cancel·lar
+gen.cancel = Cancel·la
 gen.date = Data:
-gen.delete = Esborrar
+gen.delete = Esborra
 gen.from = Des de/d':
 gen.mess = Missatge:
-gen.save = Actualitzar opcions
-control.clear = Buidar
-control.post = Afegir missatge
+gen.save = Actualitza les opcions
+control.clear = Buida
+control.post = Afegeix missatge
 custom.chatroom = Sala de xat
 custom.cuschat = Opcions de xat
-custom.days = dies
+custom.days = dies enrere
 custom.howmany = Quants missatges es mostraran?
-custom.mess = missatges
-custom.showall = Mostrar tots els missatges
-custom.showlast = Mostrar l'últim
-custom.showpast = Mostrar missatges des del passat
+custom.mess = missatge(s)
+custom.showall = Mostra tots els missatges
+custom.showlast = Mostra el(s) darrer(s)
+custom.showpast = Mostra missatges fins a
 custom.use1 = Utilitzar la sala de xat principal d'aquest lloc de treball
 custom.use2 = Utilitzar la sala de xat anomenada
 custom.use3 = Utilitzar una nova sala de xat
@@ -91,17 +91,17 @@ timeOnly=Només l'hora
 view=Visualitzar
 
 
-add_room=Afegir Sala
-change_room=Canviar Sala
+add_room=Afegeix Sala
+change_room=Canvia de Sala
 channel_creation_date=Data de Creació
 channel_description=Descripció
 channel_title=Títol
 control_panel=Control
 delete_room_confirm_alert=Esteu segurs de voler suprimir definitivament aquesta sala de xat?
 delete_room_confirm_title=Suprimint sala de xat
-edit_channel_title=Editar Sala
+edit_channel_title=Edició de la Sala
 enter_the_chat_room=Introduir ''{0}'' Sala
-gen.edit=Editar
+gen.edit=Edita
 message_display=Visor de missatges
 message_owner=Propietari
 monitor_panel=Llista
@@ -112,7 +112,7 @@ past_x_days= {0} dies enrere
 perm_description=Establir permisos per a {0} en l'espai de treball ''{1}''
 perm_error=Permisos insuficients per a {0}
 presence_panel=Presència
-recent_chat_heading=Visor de xats recents
+recent_chat_heading=Visualització de xats recents
 select_room_title=Seleccionar Sala de Xat
 set_as_default=Establir ''{0}'' per defecte
 set_default=Establir per Defecte
@@ -123,12 +123,12 @@ update_text=Actualitzar
 viewingChatRoomText=Mostrant els missatges de ''{0}''
 
 add_channel_title=Afegir Sala de Xat
-room_list_title=Administrar Sales de Xat
+room_list_title=Administració de Sales de Xat
 synoptic_options_title=Opcions sinòptiques
 #Sakai 2009
-back_to_room=Tornar a la sala
+back_to_room=Torna a la sala
 channel_description_colon=Descripció:
-channel_enable_override_description=Permetre que els usuaris canviïn les opcions de visualització per a la seva finestra de xat.
+channel_enable_override_description=Permet que els usuaris canviïn les opcions de visualització per a la seva finestra de xat.
 channel_title_colon=Títol:
 combox.viewfrom=Veure missatges des de...
 control.lab=Introduir un missatge de xat
